# orchestrator

./: .env.example  .gitignore  README.md  api_google_sheets.json.example  deployments_config.py  execute.bat  iniciar_prefect.bat  main.py  orchestrator_flow.py  prefect.yaml  pyproject.toml  requirements.txt  run_daily.bat  run_pipeline.py  sequencia_orchestrator.txt  setup_prefect.py  setup_tasks.bat  test_teams_notification.bat
config/: module_configs.py  schedules.py  settings.py
core/alertas/: .env.example  .gitignore  main.py  requirements.txt
core/api_datapii/: .env.example  __init__.py  main.py  requirements.txt
core/atualizar_google_sheets/: .env.example  atualizacao_gsheet.py  main.py  puxar_planilhas_sharepoint.py  requirements.txt
core/bfa/: .env.example  main.py
core/cg_classificacao_projetos/: __init__.py  main.py  puxar_planilhas_sharepoint.py
core/cg_classificacao_projetos_do/: .env.example  connect_sharepoint.py  main.py  requirements.txt
deployments/: daily_extract_deployment.py  google_sheets_deployment.py  main_deployment.py
flows/: classificacao_flow.py  clickhouse_flow.py  empresa_flow.py  google_sheets_flow.py  main_flow.py  negociacoes_flow.py  notification_flow.py  portfolio_flow.py  projeto_flow.py  prospeccao_flow.py  qim_ues_flow.py  sharepoint_flow.py  unidade_embrapii_flow.py  utils_flow.py
logs/: README.md  __init__.py  init_logger.py  log_error.py  log_success.py  logs_handler.py  orchestrator_logs.py  send_teams_notification.py  send_teams_notification_fixed.py  send_teams_test.py  teams_notifier.py
(+371 files in other folders)
